# insidious

./: CHANGELOG.md  README.md  flake.nix  os.nix  pyproject.toml  update-static.sh
insidious/: __init__.py  __main__.py  app.py  invidious.py  net.py  pagination.py  streaming.py  utils.py  ytdl.py
insidious/extractors/: __init__.py  client.py  data.py  filters.py  invidious.py  markup.py  piped.py  ytdlp.py
insidious/npm/media-chrome@3.2.0/: +esm
insidious/scripts/: autoreload.js  player.js  shared.js
insidious/style/: loading.css  main.css
insidious/style/fonts/: include.css
insidious/templates/: channel.html.jinja  index.html.jinja  playlist.html.jinja  search.html.jinja  watch.html.jinja
insidious/templates/parts/: comments.html.jinja  dislikes.html.jinja  entry.html.jinja  featured.html.jinja  head.html.jinja  header.html.jinja  player.html.jinja  results.html.jinja
xrtube/: __init__.py  __main__.py  app.py  invidious.py  markup.py  pagination.py  streaming.py  utils.py  ytdl.py
xrtube/npm/custom-media-element@1.2.3/: +esm
xrtube/npm/hls-video-element@1.1.3/: +esm
xrtube/npm/media-tracks@0.3.0/: +esm
xrtube/npm/xgplayer-hls.js@^2.6.4/browser/: index.js
xrtube/npm/xgplayer@^2.31.8/browser/: index.js
xrtube/scripts/: autoreload.js  shared.js
xrtube/static/: autoreload.js  jb-videojs-hls-quality-selector.js  shared.js
xrtube/style/: main.css  main.sass  main.scss
xrtube/templates/: channel.html.jinja  dislikes.html.jinja  entry.html.jinja  explore.html.jinja  group.html.jinja  header.html.jinja  index.html.jinja  player.html.jinja  playlist.html.jinja  video.html.jinja  watch.html.jinja
xrtube/templates/parts/: comments.html.jinja  entry.html.jinja  head.html.jinja  header.html.jinja  player.html.jinja  results.html.jinja
